<resources>
    <string name="app_name">Inventory App Stage 2</string>
    <string name="default_image_when_empty">Default Image when empty</string>
    <string name="get_started_by_adding_a_product">Get started by adding a product</string>
    <string name="we_run_out_of_products">We run out of products...</string>
    <string name="name">Name</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="phone">Phone</string>
    <string name="sale">Sale</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="save">save</string>
    <string name="delete">Delete</string>
    <string name="adding_product">Add a Product</string>
    <string name="editing_product">Edit Product</string>
    <string name="failed_saving_product">Error saving a product</string>
    <string name="successful_saving_product">Product saved</string>
    <string name="failed_updating_product">Error updating a product</string>
    <string name="successful_updating_product">Product updated</string>
    <string name="order_button">order</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
</resources>
